Admin-API: Manage user authorization (#55)
* Admin-API: Manage user authorization

* Initial schema fixes

* Remove syntax-breaking comma

* Add missing permissions file...

* Add more descriptions

* Fix relative path

* Path

* Made GET usergroups actually return a list...

* Made update user group ID required

* Added required fields

* More compliant enum values

* Simplify permissions API

* Update query

* review comments

* Fix tag

--- a/openapi/admin/tagTaskMapping.yaml
+++ b/openapi/admin/tagTaskMapping.yaml
@@ -56,6 +56,8 @@ post:
             type: "string"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
 put:
   tags:
     - "TagTaskMapping"
@@ -90,6 +92,8 @@ put:
             type: "string"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
     "404":
       description: "The specified relation was not found"
       content:
