--- a/openapi/admin/tagConfiguration.yaml
+++ b/openapi/admin/tagConfiguration.yaml
@@ -50,6 +50,8 @@ post:
             type: "string"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
 put:
   tags:
     - "TagConfiguration"
@@ -84,6 +86,8 @@ put:
             type: "string"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
     "404":
       description: "The specified tag configuration was not found"
       content:
