Improvements to tags in api
- Add tag configuration metadata to responses when getting time registration tags
- Add tags and tag configuration metadata to responses when getting time registrations

--- a/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
@@ -16,4 +16,4 @@ items:
     tags:
       type: array
       items:
-        $ref: TagConfiguration.yaml
+        $ref: TagTimeRegistrationRequest.yaml
