--- a/openapi/schemas/user/TimeRegistrationRequest.yaml
+++ b/openapi/schemas/user/TimeRegistrationRequest.yaml
@@ -12,6 +12,4 @@ properties:
   tags:
     type: array
     items:
-      $ref: TagConfiguration.yaml
-    
-   
+      $ref: TagTimeRegistrationRequest.yaml
