--- a/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
@@ -8,6 +8,9 @@ items:
     taskId:
       type: "integer"
       format: "int64"
+      description: |
+        Associates the time registration with a task.
+        If not specified, then the `description` field must be a non-null value
     date:
       type: "string"
       format: "date"
