Added more missing description fields

--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -29,3 +29,5 @@ items:
             $ref: ../Duration.yaml
           status:
             $ref: TimeRegistrationStatus.yaml
+          description:
+            type: "string"
