--- a/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
@@ -1,6 +1,6 @@
 type: "array"
 items:
-  required: ["userId", "taskId", "date", "duration", "tags"]
+  required: ["userId", "date", "duration", "tags"]
   properties:
     userId:
       type: "integer"
@@ -8,6 +8,9 @@ items:
     taskId:
       type: "integer"
       format: "int64"
+      description: |
+        Associates the time registration with a task.
+        If not specified, then the `description` field must be a non-null value
     date:
       type: "string"
       format: "date"
@@ -17,3 +20,5 @@ items:
       type: array
       items:
         $ref: TagTimeRegistrationRequest.yaml
+    description:
+      type: "string"
