--- a/openapi/schemas/user/TimeRegistrationResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationResponse.yaml
@@ -1,5 +1,5 @@
 type: "object"
-required: ["timeRegistrationId", "registered", "userId", "taskId", "date", "duration", "status", "tags"]
+required: ["timeRegistrationId", "registered", "userId", "date", "duration", "status", "tags"]
 properties:
   timeRegistrationId:
     type: "integer"
@@ -25,3 +25,5 @@ properties:
     type: array
     items:
       $ref: "TimeRegistrationTag.yaml"
+  description:
+    type: "string"
