--- a/openapi/schemas/admin/TaskResponse.yaml
+++ b/openapi/schemas/admin/TaskResponse.yaml
@@ -1,5 +1,5 @@
 type: "object"
-required: ["taskId", "name"]
+required: ["taskId", "name", "kmEligible"]
 properties:
   taskId:
     type: "integer"
@@ -10,3 +10,6 @@ properties:
   description:
     type: "string"
     description: "A description of the task"
+  kmEligible:
+    type: "boolean"
+    description: "Marks if the task allows for registration of kilometres"
