Km-Registration API (#63)
* Km-Registration API

* Change task km eligible name

--- a/openapi/schemas/admin/TaskCreateRequest.yaml
+++ b/openapi/schemas/admin/TaskCreateRequest.yaml
@@ -7,3 +7,7 @@ properties:
   taskDescription:
     type: "string"
     description: "An optional description of the task"
+  taskKmEligible:
+    type: "boolean"
+    description: "Marks if the task allows for registration of kilometres"
+    default: false
