--- a/openapi/schemas/admin/TaskUpdateRequest.yaml
+++ b/openapi/schemas/admin/TaskUpdateRequest.yaml
@@ -6,3 +6,6 @@ properties:
   taskDescription:
     type: "string"
     description: "An optional description of the task"
+  taskKmEligible:
+    type: "boolean"
+    description: "Marks if the task allows for registration of kilometres"
