--- a/openapi/user/km-registration.yaml
+++ b/openapi/user/km-registration.yaml
@@ -36,6 +36,7 @@ post:
   description: |
     Registers a new kilometre registration with to/from details and how many kilometres were travelled
   requestBody:
+    required: true
     content:
       application/json:
         schema:
@@ -76,6 +77,7 @@ put:
         type: "integer"
         format: "int64"
   requestBody:
+    required: true
     content:
       application/json:
         schema:
