add id to get request

--- a/openapi/schemas/user/KmRegistration.yaml
+++ b/openapi/schemas/user/KmRegistration.yaml
@@ -1,6 +1,9 @@
 type: "object"
-required: ["taskId", "date", "from", "to", "km", "status"]
+required: ["kmRegistrationId", "taskId", "date", "from", "to", "km", "status"]
 properties:
+  kmRegistrationId:
+    type: "integer"
+    format: "int64"
   taskId:
     type: "integer"
     format: "int64"
