--- a/openapi/schemas/admin/UserPermissionType.yaml
+++ b/openapi/schemas/admin/UserPermissionType.yaml
@@ -4,6 +4,7 @@ enum:
   - "ModifyTasks"
   - "ModifyGroups"
   - "ModifyPermissions"
+  - "ModifyExportSettings"
   - "ReadAll"
   - "WriteAll"
 description: >
@@ -13,5 +14,6 @@ description: >
   * `ModifyTasks` - User is allowed to create, edit, update, and delete tasks
   * `ModifyGroups` - User is a allowed to modify create, modify, and update user groups
   * `ModifyPermissions` - User is allowed to add and remove permissions from a user
+  * `ModifyExportSettings` - User is allowed to to create, edit, update, and delete settings for exporting data
   * `ReadAll` - User can read data registered by all users
   * `WriteAll` - User can read and write data registered by all users
