--- a/openapi/trireg2admin.yaml
+++ b/openapi/trireg2admin.yaml
@@ -28,6 +28,8 @@ tags:
     description: "Tag for CRUD operations related to managing users and their relation to user groups"
   - name: "UserPermission"
     description: "Tag for CRUD operations related to the configuration of user permissions"
+  - name: "ExportSetting"
+    description: "Tag for CRUD operations related to the configuration of export systems"
 paths:
   /task:
     $ref: "admin/task.yaml"
@@ -35,6 +37,8 @@ paths:
     $ref: "admin/tagConfiguration.yaml"
   /config/task-tag:
     $ref: "admin/tagTaskMapping.yaml"
+  /config/export:
+    $ref: "admin/exportConfiguration.yaml"
   /user/permission:
     $ref: admin/userPermission.yaml
   /user-group/user:
