--- a/openapi/trireg2admin.yaml
+++ b/openapi/trireg2admin.yaml
@@ -28,7 +28,7 @@ tags:
     description: "Tag for CRUD operations related to managing users and their relation to user groups"
   - name: "UserPermission"
     description: "Tag for CRUD operations related to the configuration of user permissions"
-  - name: "ExportSetting"
+  - name: "ExportConfiguration"
     description: "Tag for CRUD operations related to the configuration of export systems"
 paths:
   /task:
