Summer 2024 API changes (#64)
* Km-Registration API (#63)

* Km-Registration API

* Change task km eligible name

* require body

* Change enum names

* add id to get request

* Support for export configuration (#65)

- Add support for configuring export systems with a key/value mapping.

* Fix linter errors

- Correct name and alphabetical ordering

---------

Co-authored-by: Martin Randers <158485978+maratrifork@users.noreply.github.com>
Co-authored-by: Martin Randers <mara@trifork.com>

--- a/openapi/trireg2admin.yaml
+++ b/openapi/trireg2admin.yaml
@@ -16,6 +16,8 @@ servers:
   - url: "http://0.0.0.0:8080"
     description: Local development server
 tags:
+  - name: "ExportConfiguration"
+    description: "Tag for CRUD operations related to the configuration of export systems"
   - name: "TagConfiguration"
     description: "Tag for CRUD operations related to the configuration of tags"
   - name: "TagTaskMapping"
@@ -35,6 +37,8 @@ paths:
     $ref: "admin/tagConfiguration.yaml"
   /config/task-tag:
     $ref: "admin/tagTaskMapping.yaml"
+  /config/export:
+    $ref: "admin/exportConfiguration.yaml"
   /user/permission:
     $ref: admin/userPermission.yaml
   /user-group/user:
