Change openapi enums to upper case
- Some initial work on a Java spring client has issues with our openapi enumerations, which are not upper case. We don't really care, so they can just be changed.

--- a/openapi/schemas/admin/ExportSettingValueType.yaml
+++ b/openapi/schemas/admin/ExportSettingValueType.yaml
@@ -2,10 +2,10 @@ type: "string"
 description: >
   An enumeration of the different types of export settings.
   Valid values:
-  * `int64` - A 64 bit integer.
-  * `string` - A string.
-  * `uri` - A Uniform Resource Locator.
+  * `INT64` - A 64 bit integer.
+  * `STRING` - A string.
+  * `URI` - A Uniform Resource Locator.
 enum:
-  - "int64"
-  - "string"
-  - "url"
+  - "INT64"
+  - "STRING"
+  - "URL"
