--- a/openapi/schemas/admin/TagTaskRelationType.yaml
+++ b/openapi/schemas/admin/TagTaskRelationType.yaml
@@ -1,6 +1,6 @@
 type: "string"
 description: "The type of relation between the task and tag"
 enum:
-  - "optional"
-  - "mandatory"
-  - "hidden"
+  - "OPTIONAL"
+  - "MANDATORY"
+  - "HIDDEN"
