--- a/openapi/schemas/admin/TagConfigurationValueType.yaml
+++ b/openapi/schemas/admin/TagConfigurationValueType.yaml
@@ -1,6 +1,6 @@
 type: "string"
 description: "Describes the value type of the tag"
 enum:
-  - "string"
-  - "bool"
-  - "int"
+  - "STRING"
+  - "BOOL"
+  - "INT"
