--- a/openapi/schemas/user/KmRegistrationStatus.yaml
+++ b/openapi/schemas/user/KmRegistrationStatus.yaml
@@ -1,7 +1,7 @@
 type: "string"
 description: "Describes the status of the kilometre registration"
 enum:
-  - "pending"
-  - "accepted"
-  - "rejected"
-  - "deleted"
+  - "PENDING"
+  - "ACCEPTED"
+  - "REJECTED"
+  - "DELETED"
