Rename Tag to TagRegistration to avoid OpenAPI-generator name clash

--- a/openapi/schemas/user/TimeRegistrationTag.yaml
+++ b/openapi/schemas/user/TimeRegistrationTag.yaml
@@ -7,5 +7,5 @@ description: |
 properties:
   tagConfigurationMetadata:
     $ref: "TagConfigurationMetadata.yaml"
-  tagValue:
-    $ref: "Tag.yaml"
+  tagRegistration:
+    $ref: "TagRegistration.yaml"
