Add parameter to get additional tasks in overview
- Add an optional list of TaskIds as parameter to overview. If these are specified, the tasks will be included in the overview even if they have no time registrations.
- Introduces support for list query parameters, which were previously not handled.

--- a/openapi/user/active-task-registrations.yaml
+++ b/openapi/user/active-task-registrations.yaml
@@ -17,6 +17,14 @@ get:
       in: query
       schema:
         $ref: "../schemas/user/OverviewPeriod.yaml"
+    - name: "extraTasks"
+      description: "An optional collection of extra tasks to include in the response, regardless of whether they are active or not"
+      in: query
+      schema:
+        type: array
+        items:
+          type: integer
+          format: int64
   responses:
     "200":
       description: "List of time registrations for the user grouped by task"
