Add API for getting user privileges
- Includes the extra users that the current user has read/write access for, and additional permissions assigned to the user.
- Currently does not handle the READ_ALL or WRITE_ALL roles, which should entail fetching all users from the database.
- Tests of the new useCase function missing.

--- a/openapi/trireg2user.yaml
+++ b/openapi/trireg2user.yaml
@@ -30,6 +30,8 @@ tags:
     description: "Tag for CRUD operations related to time registrations"
   - name: "Task"
     description: "Tag for operations related to tasks"
+  - name: "User"
+    description: "Tag for operations related to users"
 paths:
   /login:
     $ref: user/login.yaml
@@ -51,6 +53,8 @@ paths:
     $ref: user/import.yaml
   /task:
     $ref: user/task.yaml
+  /user-privileges:
+    $ref: user/user-privileges.yaml
 components:
   securitySchemes:
     openId:
