--- a/openapi/user/import.yaml
+++ b/openapi/user/import.yaml
@@ -2,7 +2,10 @@ post:
   tags:
   - "Import"
   operationId: "importTimeRegistrations"
-  description: "Imports the given time registrations into the system"
+  description: |
+    Imports the given time registrations into the system.
+    When importing time registrations for the calling user, the import is treated as if normally creating the time registrations.
+    When importing for another user, the time registrations are treated as suggestions and enters a pending state.
   requestBody:
     description: "A JSON object containing time registration information to be imported"
     required: true
