Added purpose string to KmRegistrationUpdateRequest.yaml

--- a/openapi/schemas/user/KmRegistrationUpdateRequest.yaml
+++ b/openapi/schemas/user/KmRegistrationUpdateRequest.yaml
@@ -9,6 +9,8 @@ properties:
     type: "string"
   km:
     type: "integer"
+  purpose:
+    type: "string"
   status:
     type: "string"
     enum:
