--- a/openapi/trireg2user.yaml
+++ b/openapi/trireg2user.yaml
@@ -28,6 +28,10 @@ tags:
     description: "Tag for CRUD operations related to adding tags to time registrations"
   - name: "TimeRegistration"
     description: "Tag for CRUD operations related to time registrations"
+  - name: "Task"
+    description: "Tag for operations related to tasks"
+  - name: "User"
+    description: "Tag for operations related to users"
 paths:
   /login:
     $ref: user/login.yaml
@@ -47,6 +51,10 @@ paths:
     $ref: user/tag.yaml
   /import:
     $ref: user/import.yaml
+  /task:
+    $ref: user/task.yaml
+  /user-privileges:
+    $ref: user/user-privileges.yaml
 components:
   securitySchemes:
     openId:
