Move time off registration path to time-registration/time-off

--- a/openapi/trireg2user.yaml
+++ b/openapi/trireg2user.yaml
@@ -43,10 +43,10 @@ paths:
     $ref: user/associate-task-registration.yaml
   /time-registration/bulk:
     $ref: user/time-registration-bulk.yaml
+  /time-registration/time-off:
+    $ref: user/time-off-registration.yaml
   /km-registration:
     $ref: user/km-registration.yaml
-  /time-off-registration:
-    $ref: user/time-off-registration.yaml
   /export:
     $ref: user/export.yaml
   /tag:
